# lintd

./: .SRCINFO  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PKGBUILD  README.md  build-appimage.sh  build.sh  index.html  linuxdeploy-plugin-gtk.sh  linuxdeploy-wrapper.sh  linuxdeploy-wrapper2.sh  package-lock.json  package.json  tailwind.config.js
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  package_manager_request.md
.github/workflows/: build.yml  ci.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  PKGBUILD  lintd.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  distro_detect.rs  lib.rs  main.rs  sysinfo_collector.rs
src-tauri/src/pmal/: apk.rs  appimage.rs  apt.rs  dnf.rs  flatpak.rs  mod.rs  nix.rs  pacman.rs  snap.rs
src/components/: DistroLogo.tsx  MetricGauge.tsx  RefreshButton.tsx  RemovalModal.tsx  Sidebar.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  scroll-area.tsx  table.tsx  toaster.tsx  tooltip.tsx
src/lib/: commands.ts  format.ts  presentation.ts  query-keys.ts  theme-store.ts  use-debounced-value.ts  use-streaming-scan.ts
src/pages/: Dashboard.tsx  History.tsx  Orphans.tsx  Packages.tsx
src/types/: lintd.ts
