[package]
name = "lintd"
version = "1.0.0"
description = "Cross-distro Linux package auditor"
authors = ["Lintd Contributors"]
edition = "2021"

[lib]
name = "lintd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
sysinfo = "0.35"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
glob = "0.3"
dirs = "6"
async-trait = "0.1"
futures = "0.3"
png = "0.17"
